# mas_industrial_robotics

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CMakeLists.txt  Doxyfile  README.md  camera_calibration_config.rviz  docker-compose.yml  industrial_component_architecture.vpp  mainpage.dox  manifest.xml  mir.repos  package.xml  plane_det.rviz  repository.debs  repository.rosinstall  setup.py  setup.sh  start-container.yml  youbot.rviz
lifecycle_controller/: CMakeLists.txt  package.xml
lifecycle_controller/ros/include/: lifecycle_controller.hpp
lifecycle_controller/ros/src/: lifecycle_controller.cpp
mas_industrial_robotics/: CMakeLists.txt  package.xml
mir_calibration/mir_kinect_calibration/: CMakeLists.txt  package.xml
mir_calibration/mir_kinect_calibration/common/src/: transformation_estimation.cpp
mir_calibration/mir_kinect_calibration/ros/config/: kinect-calibration-rviz.vcg
mir_calibration/mir_kinect_calibration/ros/launch/: kinect_calibration.launch
mir_calibration/mir_kinect_calibration/ros/scripts/: calibrate_kinect  verify_calibration
mir_command_tools/mir_teleop/: CMakeLists.txt  README.md  package.xml
mir_command_tools/mir_teleop/ros/config/: TeleopJoypad.cfg  front_laser_config.yaml  joy.yaml  logitech.yaml  rear_laser_config.yaml  saitek.yaml  teleop.yaml
mir_command_tools/mir_teleop/ros/doc/: youbot_joypad_description.vsd
mir_command_tools/mir_teleop/ros/launch/: teleop_joypad.launch  teleop_joypad.launch.py  teleop_keyboard.launch  urg_node.launch.py
mir_command_tools/mir_teleop/ros/src/: teleop_joypad.cpp  teleop_joypad_node.cpp  teleop_keyboard_node.cpp
mir_command_tools/mir_twist_mux/: CMakeLists.txt  package.xml
mir_command_tools/mir_twist_mux/config/: params.yaml
mir_command_tools/mir_twist_mux/launch/: twist_mux.launch.py
mir_command_tools/mir_twist_mux/ros/config/: locks.yaml  topics.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
mir_command_tools/mir_twist_mux/ros/launch/: twist_mux.launch
mir_common/mir_description/: CMakeLists.txt  package.xml
mir_common/mir_description/meshes/: README.md
mir_common/mir_description/meshes/grippers/: dynamixel_small_finger_assembly_l.dae  festo_open.dae
mir_common/mir_description/meshes/misc/: adapter_plate_convex_hull.dae  plate.dae  plugbar.dae  rear_platform.dae  rear_platform_v2.dae  rear_platform_v2_convex_hull.dae  rear_plugbar.dae
mir_common/mir_description/meshes/sensor_mounts/: intel_f200_camera_mount_convex_hull.dae  side_camera_mount.STL
mir_common/mir_description/urdf/grippers/: dynamixel_gripper.gazebo.xacro  dynamixel_gripper.transmission.xacro  dynamixel_gripper.urdf.xacro  dynamixel_limits.urdf.xacro  festo_gripper.urdf.xacro
mir_common/mir_description/urdf/misc/: adapter_plate.urdf.xacro  cam3d_tower.urdf.xacro  distance_screw.urdf.xacro  full_platform.urdf.xacro  laptop_case_frame.urdf.xacro  plugbar.xacro  rear_platform.urdf.xacro  rear_platform_v2.urdf.xacro  sensor_angle.urdf.xacro  sensor_angle_shortend.urdf.xacro
mir_common/mir_description/urdf/sensor_mounts/: asus_xtion_camera_mount.urdf.xacro  intel_f200_camera_mount.urdf.xacro
mir_common/mir_description/urdf/sensors/: asus_xtion_camera.urdf.xacro  d435.urdf.xacro
mir_controllers/mir_controller_msgs/: CMakeLists.txt  package.xml
mir_controllers/mir_controller_msgs/msg/: VisualServoingState.msg
mir_controllers/mir_controller_msgs/srv/: StartVisualServoing.srv
mir_controllers/mir_visual_servoing/: CMakeLists.txt  README.md  package.xml
mir_controllers/mir_visual_servoing/ros/config/: VisualServoing.cfg
mir_controllers/mir_visual_servoing/ros/launch/: visual_servoing.launch  visual_servoing_mockup.launch  visual_servoing_pipeline.launch
mir_interfaces/: CMakeLists.txt  package.xml
mir_interfaces/mir_manipulation/msg/: GripperCommand.msg
mir_interfaces/mir_perception/msg/: BoundingBox.msg  BoundingBoxList.msg  ImageList.msg  LaserScanSegment.msg  LaserScanSegmentList.msg  NamedColor.msg  NamedShape.msg  Object.msg  ObjectEmbedding.msg  ObjectList.msg  ObjectView.msg  PlanarPolygon.msg
mir_kinematics/mir_arm_kinematics_youbot/: CMakeLists.txt  package.xml  plugins.xml
mir_kinematics/mir_ikfast_youbot/: CMakeLists.txt  package.xml  youbot_arm_1_moveit_ikfast_plugin_description.xml
mir_kinematics/mir_kinematics/: CMakeLists.txt  package.xml
mir_manipulation/mir_arm_cartesian_control/: CMakeLists.txt  package.xml
mir_manipulation/mir_arm_motions/: CMakeLists.txt  README.md  package.xml
mir_manipulation/mir_arm_relative_motion_control/: CMakeLists.txt  package.xml
mir_object_recognition/: Backup_of_CMakeLists.txt  CMakeLists.txt  package.xml
mir_object_recognition/common/src/: bounding_box.cpp  cloud_accumulation.cpp  laserscan_segmentation.cpp  pointcloud_utils.cpp  scene_segmentation.cpp
mir_object_recognition/ros/config/: pc_classifier_config.yaml  rgb_classifier_config.yaml  scene_segmentation_constraints.yaml
mir_object_recognition/ros/include/: lifecycle_controller.hpp  multimodal_object_recognition_controller.hpp
mir_object_recognition/ros/launch/: data_collector.launch.py  multimodal_object_recognition.launch.py  multimodal_object_recognition.py  sample_lifecycle_demo.launch.py
mir_object_recognition/ros/rviz/: mir_object_recognition.rviz
mir_object_recognition/ros/src/: lifecycle_controller.cpp  mmor_data_collector.cpp  mmor_data_logger.cpp  multimodal_object_recognition.cpp  multimodal_object_recognition_controller.cpp  multimodal_object_recognition_parameters.cpp  multimodal_object_recognition_utils.cpp  object_utils_ros.cpp  sample_lifecycle_pubsub.cpp  sample_lifecycle_service_client.cpp  sample_tf2_transformer.cpp  scene_segmentation_node.cpp  scene_segmentation_ros.cpp
mir_recognizer_scripts/: package.xml  setup.cfg  setup.py
mir_recognizer_scripts/launch/: rgb_recognizer.launch.py
mir_recognizer_scripts/mir_recognizer_scripts/: orig_rgb.py  rgb_object_recognizer_node.py
mir_recognizer_scripts/mir_recognizer_scripts/rgb_object_recognition/: __init__.py
(+1732 files in other folders)
