<?xml version="1.0"?>
<package format="2">
  <name>mir_object_recognition</name>
  <version>0.0.0</version>
  <description>The mir_object_recognition package</description>

  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>
  <license>GPLv3</license>
  <author email="mwasil@outlook.co.id">Mohammad Wasil</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>mas_perception_libs</build_depend>
  <build_depend>mas_perception_msgs</build_depend>
  <build_depend>mcr_algorithms</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mas_perception_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>roslaunch</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
