<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_recognizer_scripts</name>
  <version>0.0.0</version>
  <description>The mir_recognizer_scripts package</description>
  <maintainer email="mwasil@outlook.co.id">Mohammad Wasil</maintainer>
  <license>GPLv3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>torchvision</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mas_perception_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
