<?xml version="1.0"?>
<package>
  <name>mir_kinect_calibration</name>
  <version>0.0.1</version>
  <description> Calibrate extrinsic parameters (mounting pose) of the Kinect camera</description>

  <maintainer email="sergey.alexandrov@smail.inf.h-brs.de">Sergey Alexandrov</maintainer>

  <license>GPLv3</license>

  <author email="sergey.alexandrov@smail.inf.h-brs.de">Sergey Alexandrov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mir_bringup</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>roslaunch</test_depend>

</package>
