<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mir_twist_mux</name>
  <version>0.0.0</version>
  <description>Launch and configure a Twist multiplexer, which multiplex several velocity commands (topics) and
      allows to priorize or disable them (locks).</description>
  <maintainer email="vamsikalagaturu@gmail.com">Vamsi Kalagaturu</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
