<?xml version="1.0"?>
<package>
  <name>mir_description</name>
  <version>0.0.1</version>
  <description>common descriptions of sensors, actuators and other devices</description>

  <maintainer email="frederik.hegger@h-brs.de">Frederik Hegger</maintainer>

  <license>GPLv3</license>
 
  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_description</run_depend>
  <run_depend>youbot_description</run_depend>

</package>